@@ -55,9 +55,6 @@ public class IllegalaccessProfile
             {
             // options introduced in jdk 9
             Freeforms jvmOptions = JvmOptions.include(
-                        "--add-opens=java.base/java.nio=ALL-UNNAMED",
-                        "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
-                        "--add-exports=java.management/sun.management=ALL-UNNAMED",
                         "--add-opens=java.base/java.lang=ALL-UNNAMED");
 
             // Support was removed in JDK 17 so avoid warning message by not including in JDK 17 and greater
